# react-collections

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
api/: .gitignore  .pylintrc  nodemon.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
api/api/: config.py  dependencies.py  dependency.py  main.py  models.py  schema.py
api/api/router/: recipe.py  session.py  socket.py  stream.py  user.py
api/api/routers/: account_recovery.py  graphql.py  images.py  place.py  session.py  socket.py  stream.py  user.py  users.py  validator.py
api/api/services/: household.py  purok.py
api/api/utils/: __init__.py  date_difference.py  file_uploader.py  jsonwebtoken.py  socket.py  validator.py  validators.py
api/docs/: Insomnia_2022-01-22.yaml
api/prisma/: schema.prisma
api/prisma/migrations/20211208123102_first_migration/: migration.sql
api/prisma/migrations/20211208140908_/: migration.sql
api/prisma/migrations/20220119133247_/: migration.sql
api/src/: app.ts  index.ts  resolvers.ts  router.ts  typeDefs.ts  utils.ts
api/src/plugins/: auth.ts  cors.ts  database.ts  dotenv.ts  env.ts  helmet.ts  jwt.ts  multipart.ts  prisma.ts  redis.ts  sensible.ts  static.ts  support.ts  swagger.ts  uploadsManager.ts  websocket.ts
api/src/prisma/: schema.prisma
api/src/routes/: index.ts  root.ts
api/src/routes/account-recovery/: index.ts
api/src/routes/favorites/: index.ts
api/src/routes/instructions/: index.ts
api/src/routes/recipes/: index.ts
api/src/routes/reviews/: index.ts
api/src/routes/sessions/: index.ts
api/src/routes/users/: index.ts
api/src/services/: favorite.ts  index.ts  instruction.ts  recipe.ts  review.ts  user.ts
api/src/services/constants/: selectables.ts
api/src/services/types/: db.ts  paginated.ts
api/src/services/utils/: normalize.ts
api/src/utils/: uploadsManager.ts
app/: root.tsx
(+325 files in other folders)
