[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["jp calvo <calvojp92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.2"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
sqlmodel = "^0.0.4"
email-validator = "^1.1.3"
python-dotenv = "^0.19.2"
python-multipart = "^0.0.5"
bcrypt = "^3.2.0"
python-jose = "^3.3.0"
redis = "^3.5.3"
httpx = "^0.20.0"
beautifulsoup4 = "^4.10.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.11.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
